1. add release build 2. rename to android-cmake and its project name to cmake_test 3. fix unused DT_RPATH warning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,60 @@
 cmake_minimum_required (VERSION 3.5)
 #第一個Project: helloworld
-project (helloworld)
+project (cmake_test)
 
 #Android編譯通用設定
 include(${CMAKE_CURRENT_SOURCE_DIR}/AndroidCommon.cmake)
 
 #Project設定
+#C99 for C;C++14 for C++
+set(CMAKE_C_STANDARD 99)
+set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_BINARY_DIR "/home/jeremychen/android-workspace/helloworld/")
-#add_executable(helloworld main.cpp func.c)
-SET(CMAKE_SKIP_BUILD_RPATH TRUE) #解決DT_RPATH unused的警告，這是由linker發出
-add_executable(helloworld main.cpp)
-add_library(myfunc SHARED func.c)
-target_link_libraries(helloworld PRIVATE myfunc)
-target_link_libraries(helloworld PRIVATE c++ c m dl)
+
+#Project Build Targets
+set(ANDROID_TARGET helloworld)
+set(ANDROID_LIB_MYFUNC myfunc)
+
+add_executable(${ANDROID_TARGET} main.cpp)
+add_library(${ANDROID_LIB_MYFUNC} SHARED func.c)
+#讓myfunc lib使用C99
+set_property(TARGET ${ANDROID_LIB_MYFUNC} PROPERTY C_STANDARD 99)
+
+target_link_libraries(${ANDROID_TARGET} PRIVATE ${ANDROID_LIB_MYFUNC})
+target_link_libraries(${ANDROID_TARGET} PRIVATE c++ c m dl)
+
+#執行檔依賴動態函式庫
+add_dependencies(${ANDROID_TARGET} ${ANDROID_LIB_MYFUNC})
+#加入Target專有的Link option
+set_target_properties(${ANDROID_TARGET} PROPERTIES LINK_FLAGS "-fPIC -DPIC") 
+
+#[[
+add_custom_command(OUTPUT dummy.cpp
+  COMMAND echo "//HelloDummy" >  dummy.cpp
+  COMMENT "Generate dummy.cpp from IDL"
+)
+add_executable(${ANDROID_TARGET} main.cpp dummy.cpp)
+
+add_custom_command(TARGET ${ANDROID_LIB_MYFUNC}
+    POST_BUILD
+    COMMAND adb root
+    COMMAND adb wait-for-device 
+    COMMAND adb remount
+    COMMAND adb wait-for-device
+    COMMAND adb push libmyfunc.so /system/lib64
+    COMMENT  "This is a test"
+)
+
+add_custom_command(TARGET ${ANDROID_TARGET}
+    POST_BUILD
+    COMMAND adb root
+    COMMAND adb wait-for-device 
+    COMMAND adb remount
+    COMMAND adb wait-for-device
+    COMMAND adb push helloworld /system/bin
+    COMMAND adb shell helloworld
+    #COMMAND rm ${CMAKE_BINARY_DIR}
+    COMMENT  "This is a test"
+)
+#]]
